# ovh-api-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  glama.json  release-plz.toml  server.json
.githooks/: commit-msg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  mcp-registry.yml  release-plz.yml  release.yml
docs/: publishing.md
src/: auth.rs  main.rs  sandbox.rs  spec.rs  tools.rs  types.rs
