[package]
name = "ovh-api-mcp"
version = "0.2.0"
edition = "2021"
rust-version = "1.92"
license = "MIT"
description = "MCP server for the OVH API — explore and execute any OVH endpoint via JavaScript sandboxing"
repository = "https://github.com/davidlandais/ovh-api-mcp"
keywords = ["mcp", "ovh", "api", "model-context-protocol", "cloud"]
categories = ["command-line-utilities", "web-programming::http-client"]
authors = ["David Landais"]

[[bin]]
name = "ovh-api-mcp"
path = "src/main.rs"

[dependencies]
# MCP SDK
rmcp = { version = "1.2", features = ["server", "macros", "transport-streamable-http-server", "transport-io"] }

# Web framework & HTTP
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# QuickJS sandbox
rquickjs = { version = "0.11", features = ["futures"] }

# OVH auth signature
sha1 = "0.10"
hex = "0.4"

# Secrets protection
secrecy = { version = "0.10", features = ["serde"] }

# URL encoding
urlencoding = "2"

[package.metadata.git-cliff.changelog]
header = """# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/),
and this project adheres to [Semantic Versioning](https://semver.org/).

"""
body = """
{% if version %}
    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else %}
    ## [Unreleased]
{% endif -%}
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | striptags | trim }}
    {% for commit in commits -%}
    - {{ commit.message | upper_first | split(pat="\n") | first }}
    {% endfor -%}
{% endfor %}
"""
footer = ""
trim = true

[package.metadata.git-cliff.git]
conventional_commits = true
filter_unconventional = true
split_commits = false
commit_parsers = [
  { message = "^feat", group = "Added" },
  { message = "^fix", group = "Fixed" },
  { message = "^docs", group = "Documentation" },
  { message = "^style", group = "Style" },
  { message = "^refactor", group = "Changed" },
  { message = "^perf", group = "Performance" },
  { message = "^test", group = "Testing" },
  { message = "^chore", group = "Miscellaneous" },
  { message = "^deps", group = "Dependencies" },
  { message = "^security", group = "Security" },
]
filter_commits = false
tag_pattern = "v[0-9].*"
sort_commits = "newest"
